[tool.black]
line-length = 79

[tool.poetry]
name = "Analysis use RAM in Python"
version = "0.1.0"
description = ""
authors = ["Alex Grytsai <grytsai.alex@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.1.0"
flake8 = "^7.1.1"
psutil = "^7.0.0"
pytz = "^2025.1"
python-dateutil = "^2.9.0.post0"
pydantic = "^2.10.6"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
